--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0-rc.8",
     "lint-staged": "^7.1.3",
+    "prettier": "^1.13.4",
     "webpack": "^4.12.0",
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "lint:js": "eslint src/js"
+    "lint:js": "eslint src/js",
+    "prettier:js": "prettier 'src/js/**/*.js' --write"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:js"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run prettier:js",
+      "npm run lint:js -- --fix",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "trailingComma": "all",
+    "singleQuote": true
   }
 }
