--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "husky": "^1.0.0-rc.8",
     "lint-staged": "^7.1.3",
     "prettier": "^1.13.4",
+    "rimraf": "^2.6.2",
     "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
+    "rm:dist": "rimraf dist",
     "lint:js": "eslint src/js",
-    "prettier:js": "prettier 'src/js/**/*.js' --write"
+    "prettier:js": "prettier 'src/js/**/*.js' --write",
+    "build:dev": "npm run rm:dist && webpack --mode=development",
+    "build:prod": "npm run rm:dist && webpack --mode=production",
+    "serve:dev": "webpack-dev-server --mode=development"
   },
   "husky": {
     "hooks": {
