--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "core-js": "^2.5.7"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
